--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,10 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-
+<div class="center-container">
+  <div class="container">
 <div class="row justify-content-center">
-  <div class="col-md-6">
+  <div class="content-wrapper">
     <div class="card-custom text-center" role="form" aria-labelledby="login-title">
       <h2 id="login-title" class="mb-4">Incident Response Plan</h2>
       <h3 class="text-muted mb-3"> Login</h3>
@@ -51,5 +52,7 @@
       <p class="text-center text-muted">Application Version: {{ version }}</p>
     </div>
   </div>
+</div>
+    </div>
 </div>
 {% endblock %}
